# brainrust

./: Cargo.toml  LICENSE.md  README.md  build.rs  input.bf
examples/: 99-bottles.bf  hello-world-no-memchr.bf  hello-world.bf  long.bf  mandelbrot.bf  print-a.bf  squares.bf
src/: ast.rs  bytecode.rs  executor.rs  input.bf  interpreter.rs  jit.rs  lib.rs  llvm.rs  main.rs  optimizer.rs  parser.rs
src/assembler/: x86_64.rs
src/optimizer/: loops.rs  moves.rs  mutations.rs  propagate_constants.rs
