[package]
name = "brainrust"
version = "0.1.0"
authors = ["Mark Rowe <mrowe@bdash.net.nz>"]
edition = "2018"

[features]
default = []

llvm = ["llvm-alt"]

[dependencies]
argparse = "0.2.2"
itertools = "0.8.2"
libc = "0.2.66"
unreachable = "1.0.0"
vec_map = "0.8.1"
syscall = "0.2.1"

[dependencies.llvm-alt]
git = "https://github.com/TomBebbington/llvm-rs.git"
rev = "e12320221a4590d5c658306539b235b103651fda"
optional = true
