[package]
name = "brainrust"
version = "0.1.0"
authors = ["Mark Rowe <mrowe@bdash.net.nz>"]
edition = "2018"

[features]
default = []

llvm = ["llvm-rs"]

[dependencies]
argparse = "0.2.2"
itertools = "0.8.2"
libc = "0.2.66"
unreachable = "1.0.0"
vec_map = "0.8.1"
syscall = "0.2.1"

[dependencies.llvm-rs]
git = "https://github.com/lapz/llvm-rs/"
rev = "30e52531a580d4b73545731394317277a3ccb84f"
optional = true
